--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div id="mocha"></div>
-		<script src='ShappenTemplate.js'></script>
+		<script src='happenTemplate.js'></script>
 		<script src='happen.tests.js'></script>
 
 		<script>
